<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="24dp"
    android:background="@android:color/white">


    <ImageView
        android:id="@+id/fondoImagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo1"
        android:scaleType="centerCrop"
        android:alpha="0.3"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/txt_principal"
        android:textColor="#3F51B5"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_ingresar"
        android:layout_width="332dp"
        android:layout_height="39dp"
        android:layout_marginTop="144dp"
        android:hint="@string/txt_ingresar"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="#1A1616"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo" />

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="237dp"
        android:layout_height="117dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/btn_color_estado"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/text_btn_continuar"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ingresar" />

</androidx.constraintlayout.widget.ConstraintLayout>
